P99 latency for v0.1.0 with 100k & 1M operations